--- a/proyectojuegos.ipynb
+++ b/proyectojuegos.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "        victorias_usuario=0\n",
     "        victorias_ordenador=0\n",
     "        print(f'✂️🧻🪨 BIENVENIDO A PIEDRA, PAPEL O TIJERA 🪨🧻✂️')\n",
+    "        print('-----')\n",
     "        while ronda <=3:\n",
     "            pregunta = input('Piedra, papel o tijera').lower()\n",
     "            eleccion = random.choice(lista_juego) \n",
@@ -127,6 +128,7 @@
     "        puntos = 0\n",
     "        ronda = 1\n",
     "        print(f'🌍 BIENVENIDO A PREGUNTAS SOBRE GEOGRAFÍA 🌍')\n",
+    "        print('-----')\n",
     "        while ronda <=10:\n",
     "\n",
     "            pregunta, respuesta = choices(list(preguntas.items()), k=1)[0]\n",
@@ -181,6 +183,7 @@
     "        intentos = 1\n",
     "\n",
     "        print(f'🐘🦁 BIENVENIDO AL AHORCADO. ¡Descubre el animal oculto! 🦁🐘')\n",
+    "        print('-----')\n",
     "        \n",
     "        while intentos <10 and \"_\" in caracter:\n",
     "        \n",
@@ -210,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,22 +230,17 @@
      "output_type": "stream",
      "text": [
       "✂️🧻🪨 BIENVENIDO A PIEDRA, PAPEL O TIJERA 🪨🧻✂️\n",
-      "Piedra es igual a piedra\n",
-      "----\n",
+      "-----\n",
       "Papel es igual a papel\n",
       "----\n",
       "RONDA 1\n",
-      "¡Has ganado! 🧻 gana 🪨\n",
+      "¡Has perdido! 🧻 gana 🪨\n",
       "----\n",
       "RONDA 2\n",
-      "¡Has perdido! ✂️ gana 🧻\n",
-      "----\n",
-      "Papel es igual a papel\n",
-      "----\n",
-      "Papel es igual a papel\n",
+      "¡Has perdido! 🧻 gana 🪨\n",
       "----\n",
       "RONDA 3\n",
-      "¡Has perdido! ✂️ gana 🧻\n",
+      "¡Has ganado! 🪨 gana ✂️\n",
       "----\n",
       "¡OH NO! ¡HAS PERDIDO! 😭\n"
      ]
